Added Disease Detection and hin voice support

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,11 +4,83 @@
   "dashboard": "Dashboard", 
   "community": "Community",
   "chatSupport": "Chat Support",
+  "Disease Detection": "Disease Detection",
+  "Disease Prediction": "Disease Prediction",
+  "Upload Plant Image": "Upload Plant Image",
+  "Drag and drop your image here": "Drag and drop your image here",
+  "or click to browse files": "or click to browse files",
+  "Supports JPG, PNG, WebP (max 5MB)": "Supports JPG, PNG, WebP (max 5MB)",
+  "Browse Files": "Browse Files",
+  "Take Photo": "Take Photo",
+  "Analyze Plant": "Analyze Plant",
+  "Analyzing...": "Analyzing...",
+  "Tips for Better Results": "Tips for Better Results",
+  "Take clear, well-lit photos": "Take clear, well-lit photos",
+  "Focus on affected leaves or parts": "Focus on affected leaves or parts",
+  "Avoid blurry or dark images": "Avoid blurry or dark images",
+  "Include multiple angles if possible": "Include multiple angles if possible",
+  "Disease Detected": "Disease Detected",
+  "AI Analysis Results": "AI Analysis Results",
+  "Disease Name": "Disease Name",
+  "Confidence": "Confidence",
+  "Severity": "Severity",
+  "Description": "Description",
+  "Recommended Treatment": "Recommended Treatment",
+  "Prevention Tips": "Prevention Tips",
+  "No Analysis Yet": "No Analysis Yet",
+  "Upload an image of your crop or plant to get instant disease detection and treatment recommendations powered by AI.": "Upload an image of your crop or plant to get instant disease detection and treatment recommendations powered by AI.",
+  "Upload an image of your plant to get disease detection and treatment recommendations.": "Upload an image of your plant to get disease detection and treatment recommendations.",
+  "Check Service Health": "Check Service Health",
+  "Checking...": "Checking...",
+  "Service Online": "Service Online",
+  "Service Offline": "Service Offline",
+  "Crop Type": "Crop Type",
+  "Status": "Status",
+  "Plant is Healthy": "Plant is Healthy",
+  "Analysis Visualization": "Analysis Visualization",
+  "Highlighted areas show detected disease symptoms": "Highlighted areas show detected disease symptoms",
   "signIn": "Sign In", 
   "getStarted": "Get Started",
   "goToDashboard": "Go to Dashboard",
   "logout": "Logout",
   "profile": "Profile",
+  "Please select a valid image file (JPG, PNG, WebP).": "Please select a valid image file (JPG, PNG, WebP).",
+  "Image size should be less than 5MB.": "Image size should be less than 5MB.",
+  "Failed to analyze image. Please try again.": "Failed to analyze image. Please try again.",
+  "An unexpected error occurred. Please try again.": "An unexpected error occurred. Please try again.",
+  "The plant appears to be healthy. Continue with regular care.": "The plant appears to be healthy. Continue with regular care.",
+  "No specific disease could be identified. Monitor the plant for any changes.": "No specific disease could be identified. Monitor the plant for any changes.",
+  "has been detected. This condition may affect plant health and productivity.": "has been detected. This condition may affect plant health and productivity.",
+  "Continue regular watering and fertilization.": "Continue regular watering and fertilization.",
+  "Monitor for any changes.": "Monitor for any changes.",
+  "Ensure adequate sunlight.": "Ensure adequate sunlight.",
+  "Remove affected leaves immediately.": "Remove affected leaves immediately.",
+  "Apply appropriate fungicide or pesticide.": "Apply appropriate fungicide or pesticide.",
+  "Improve air circulation.": "Improve air circulation.",
+  "Adjust watering practices.": "Adjust watering practices.",
+  "Plant disease-resistant varieties.": "Plant disease-resistant varieties.",
+  "Maintain proper spacing.": "Maintain proper spacing.",
+  "Regular monitoring.": "Regular monitoring.",
+  "Practice crop rotation.": "Practice crop rotation.",
+  "Maintain optimal soil health.": "Maintain optimal soil health.",
+  "Analysis Results Appear Here": "Analysis Results Appear Here",
+  "Upload an image to get AI-powered disease detection and treatment recommendations.": "Upload an image to get AI-powered disease detection and treatment recommendations.",
+  "Highlighted areas show detected symptoms.": "Highlighted areas show detected symptoms.",
+  "Treatment": "Treatment",
+  "Prevention": "Prevention",
+  "AI Disease Prediction": "AI Disease Prediction",
+  "Upload a plant image for instant disease detection and care recommendations.": "Upload a plant image for instant disease detection and care recommendations.",
+  "For the best results, use a clear, well-lit photo of the affected plant area.": "For the best results, use a clear, well-lit photo of the affected plant area.",
+  "Drag & drop or click to upload": "Drag & drop or click to upload",
+  "Use Camera": "Use Camera",
+  "Failed to check service health": "Failed to check service health",
+  "Plant preview": "Plant preview",
+  "Analysis visualization": "Analysis visualization",
+  "Unknown": "Unknown",
+  "unknown": "unknown",
+  "No disease detected": "No disease detected",
+  "Severe": "Severe",
+  "Moderate": "Moderate",
   "common": {
     "loading": "Loading...",
     "error": "Error",
