--- a/public/locales/hi/common.json
+++ b/public/locales/hi/common.json
@@ -1,13 +1,85 @@
 {
   "predict": "पूर्वानुमान",
+  "Upload an image of your crop or plant to get instant disease detection and treatment recommendations powered by AI.": "एआई द्वारा संचालित तत्काल रोग पहचान और उपचार सुझाव प्राप्त करने के लिए अपनी फसल या पौधे की एक तस्वीर अपलोड करें।",
+  "Upload an image of your plant to get disease detection and treatment recommendations.": "रोग की पहचान और उपचार की सिफारिशें प्राप्त करने के लिए अपने पौधे की एक तस्वीर अपलोड करें।",
+  "Check Service Health": "सेवा स्वास्थ्य जांचें",
+  "Checking...": "जांच रहे हैं...",
+  "Service Online": "सेवा ऑनलाइन",
+  "Service Offline": "सेवा ऑफलाइन",
+  "Crop Type": "फसल का प्रकार",
+  "Status": "स्थिति",
+  "Plant is Healthy": "पौधा स्वस्थ है",
+  "Analysis Visualization": "विश्लेषण दृश्यीकरण",
+  "Highlighted areas show detected disease symptoms": "हाइलाइट किए गए क्षेत्र पहचाने गए रोग के लक्षण दिखाते हैं",
   "dashboard": "डैशबोर्ड",
   "community": "समुदाय", 
   "chatSupport": "चैट सहायता",
+  "Disease Detection": "रोग पहचान",
+  "Disease Prediction": "रोग पूर्वानुमान", 
+  "Upload Plant Image": "पौधे की तस्वीर अपलोड करें",
+  "Drag and drop your image here": "अपनी तस्वीर यहाँ खींचें और छोड़ें",
+  "or click to browse files": "या फाइलें ब्राउज़ करने के लिए क्लिक करें",
+  "Supports JPG, PNG, WebP (max 5MB)": "JPG, PNG, WebP समर्थित (अधिकतम 5MB)",
+  "Browse Files": "फाइलें ब्राउज़ करें",
+  "Take Photo": "फोटो लें",
+  "Analyze Plant": "पौधे का विश्लेषण करें",
+  "Analyzing...": "विश्लेषण हो रहा है...",
+  "Tips for Better Results": "बेहतर परिणामों के लिए सुझाव",
+  "Take clear, well-lit photos": "स्पष्ट, अच्छी रोशनी में फोटो लें",
+  "Focus on affected leaves or parts": "प्रभावित पत्तियों या भागों पर ध्यान दें",
+  "Avoid blurry or dark images": "धुंधली या अंधेरी तस्वीरों से बचें",
+  "Include multiple angles if possible": "यदि संभव हो तो कई कोणों को शामिल करें",
+  "Disease Detected": "रोग का पता लगा",
+  "AI Analysis Results": "AI विश्लेषण परिणाम",
+  "Disease Name": "रोग का नाम",
+  "Confidence": "विश्वास",
+  "Severity": "गंभीरता",
+  "Description": "विवरण",
+  "Recommended Treatment": "अनुशंसित उपचार",
+  "Prevention Tips": "रोकथाम के सुझाव",
+  "No Analysis Yet": "अभी तक कोई विश्लेषण नहीं",
   "signIn": "साइन इन",
   "getStarted": "शुरू करें",
   "goToDashboard": "डैशबोर्ड पर जाएं",
   "logout": "लॉगआउट",
   "profile": "प्रोफाइल",
+  "Please select a valid image file (JPG, PNG, WebP).": "कृपया एक वैध छवि फ़ाइल चुनें (JPG, PNG, WebP)।",
+  "Image size should be less than 5MB.": "छवि का आकार 5MB से कम होना चाहिए।",
+  "Failed to analyze image. Please try again.": "छवि का विश्लेषण करने में विफल। कृपया पुनः प्रयास करें।",
+  "An unexpected error occurred. Please try again.": "एक अप्रत्याशित त्रुटि हुई। कृपया पुनः प्रयास करें।",
+  "The plant appears to be healthy. Continue with regular care.": "पौधा स्वस्थ दिखाई देता है। नियमित देखभाल जारी रखें।",
+  "No specific disease could be identified. Monitor the plant for any changes.": "कोई विशिष्ट रोग पहचाना नहीं जा सका। पौधे में किसी भी बदलाव के लिए निगरानी रखें।",
+  "has been detected. This condition may affect plant health and productivity.": "का पता लगा है। यह स्थिति पौधे के स्वास्थ्य और उत्पादकता को प्रभावित कर सकती है।",
+  "Continue regular watering and fertilization.": "नियमित पानी देना और उर्वरक देना जारी रखें।",
+  "Monitor for any changes.": "किसी भी बदलाव के लिए निगरानी रखें।",
+  "Ensure adequate sunlight.": "पर्याप्त धूप सुनिश्चित करें।",
+  "Remove affected leaves immediately.": "प्रभावित पत्तियों को तुरंत हटा दें।",
+  "Apply appropriate fungicide or pesticide.": "उचित कवकनाशक या कीटनाशक लागू करें।",
+  "Improve air circulation.": "वायु परिसंचरण में सुधार करें।",
+  "Adjust watering practices.": "पानी देने की प्रथाओं को समायोजित करें।",
+  "Plant disease-resistant varieties.": "रोग प्रतिरोधी किस्में लगाएं।",
+  "Maintain proper spacing.": "उचित दूरी बनाए रखें।",
+  "Regular monitoring.": "नियमित निगरानी।",
+  "Practice crop rotation.": "फसल चक्रण का अभ्यास करें।",
+  "Maintain optimal soil health.": "इष्टतम मिट्टी स्वास्थ्य बनाए रखें।",
+  "Analysis Results Appear Here": "विश्लेषण परिणाम यहां दिखाई देते हैं",
+  "Upload an image to get AI-powered disease detection and treatment recommendations.": "AI-संचालित रोग पहचान और उपचार सिफारिशें प्राप्त करने के लिए एक छवि अपलोड करें।",
+  "Highlighted areas show detected symptoms.": "हाइलाइट किए गए क्षेत्र पहचाने गए लक्षण दिखाते हैं।",
+  "Treatment": "उपचार",
+  "Prevention": "रोकथाम",
+  "AI Disease Prediction": "AI रोग पूर्वानुमान",
+  "Upload a plant image for instant disease detection and care recommendations.": "तत्काल रोग पहचान और देखभाल सिफारिशों के लिए पौधे की छवि अपलोड करें।",
+  "For the best results, use a clear, well-lit photo of the affected plant area.": "सर्वोत्तम परिणामों के लिए, प्रभावित पौधे क्षेत्र की स्पष्ट, अच्छी रोशनी वाली फोटो का उपयोग करें।",
+  "Drag & drop or click to upload": "खींचें और छोड़ें या अपलोड करने के लिए क्लिक करें",
+  "Use Camera": "कैमरा का उपयोग करें",
+  "Failed to check service health": "सेवा स्वास्थ्य जांचने में विफल",
+  "Plant preview": "पौधे का पूर्वावलोकन",
+  "Analysis visualization": "विश्लेषण दृश्यीकरण",
+  "Unknown": "अज्ञात",
+  "unknown": "अज्ञात",
+  "No disease detected": "कोई रोग नहीं पाया गया",
+  "Severe": "गंभीर",
+  "Moderate": "मध्यम",
   "common": {
     "loading": "लोड हो रहा है...",
     "error": "त्रुटि",
