--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -143,5 +143,89 @@
     "offline": "Offline",
     "thinking": "Thinking...",
     "ready": "Ready"
+  },
+  "landing": {
+    "heroTitle": "Smart Farming with AI-Powered",
+    "heroTitleHighlight": "Crop Intelligence",
+    "heroDescription": "Detect crop diseases instantly, predict yields accurately, and access real-time market data to maximize your farming success with AgriVision's advanced AI platform.",
+    "aiDiseaseDetection": "AI Disease Detection",
+    "liveMarketPrices": "Live Market Prices",
+    "yieldPredictions": "Yield Predictions",
+    "startFreePrediction": "Start Free Prediction",
+    "detectDisease": "Detect Disease",
+    "trustedByFarmers": "Trusted by Farmers Nationwide",
+    "trustedDescription": "Our AI-powered platform delivers measurable results for modern agriculture",
+    "diseaseDetectionAccuracy": "Disease Detection Accuracy",
+    "aiPoweredDiseaseIdentification": "AI-powered disease identification",
+    "marketsCovered": "Markets Covered",
+    "realTimePriceData": "Real-time price data",
+    "cropDiseasesDetected": "Crop Diseases Detected",
+    "comprehensiveDiseaseDatabase": "Comprehensive disease database",
+    "yieldPredictionAccuracy": "Yield Prediction Accuracy",
+    "weatherIntegratedForecasting": "Weather-integrated forecasting",
+    "averageProfitIncrease": "Average Profit Increase",
+    "withMarketIntelligence": "With market intelligence",
+    "diseaseDetectionSpeed": "Disease Detection Speed",
+    "instantImageAnalysis": "Instant image analysis",
+    "keyFeatures": "Key Features",
+    "keyFeaturesDescription": "AgriVision offers a range of features designed to help farmers make informed decisions and improve their crop yields.",
+    "accurateYieldPredictions": "Accurate Yield Predictions",
+    "accurateYieldPredictionsDesc": "Our AI models provide highly accurate yield predictions based on historical data, weather patterns, and soil conditions to help you plan harvest and optimize resources.",
+    "aiDiseaseDetectionFeature": "AI Disease Detection",
+    "aiDiseaseDetectionDesc": "Upload crop images to instantly detect diseases using advanced computer vision. Get detailed diagnosis, treatment recommendations, and prevention strategies with confidence scores.",
+    "realTimeMarketPrices": "Real-Time Market Prices",
+    "realTimeMarketPricesDesc": "Access live market prices across 1000+ markets, track price trends, monitor crop demand, and make informed selling decisions to maximize your profits.",
+    "cropSpecificModels": "Crop-Specific Models",
+    "cropSpecificModelsDesc": "We offer specialized models for a variety of crops, ensuring precise predictions tailored to your specific needs and local growing conditions.",
+    "marketAnalytics": "Market Analytics",
+    "marketAnalyticsDesc": "Analyze market trends, compare prices across regions, track seasonal patterns, and identify the best times to sell your produce for optimal returns.",
+    "instantInsights": "Instant Insights",
+    "instantInsightsDesc": "Get real-time weather alerts, disease outbreak warnings, and market opportunities delivered instantly to help you make quick, informed decisions.",
+    "powerfulFeatures": "Powerful Features for Modern Farming",
+    "powerfulFeaturesDesc": "AgriVision combines cutting-edge AI technology with comprehensive market intelligence to empower farmers with actionable insights and data-driven decisions.",
+    "diseaseDetectionCategory": "Disease Detection",
+    "aiPoweredCropDiseaseAnalysis": "AI-Powered Crop Disease Analysis",
+    "aiPoweredCropDiseaseAnalysisDesc": "Advanced computer vision technology that analyzes crop images to detect diseases early, helping prevent crop loss and reduce treatment costs.",
+    "instantDiseaseIdentification": "Instant disease identification from photos",
+    "accuracyAcrossDiseases": "95%+ accuracy across 50+ common crop diseases",
+    "detailedTreatmentRecommendations": "Detailed treatment recommendations",
+    "preventionStrategiesBestPractices": "Prevention strategies and best practices",
+    "confidenceScoringReliableResults": "Confidence scoring for reliable results",
+    "diseaseDetectionAccuracyStat": "Disease Detection Accuracy",
+    "acrossDiseases": "Across 50+ diseases",
+    "marketIntelligenceCategory": "Market Intelligence",
+    "realTimeMarketDataAnalytics": "Real-Time Market Data & Analytics",
+    "realTimeMarketDataAnalyticsDesc": "Comprehensive market intelligence platform providing live prices, trends, and analytics to help farmers make profitable selling decisions.",
+    "livePricesFromMarkets": "Live prices from 1000+ markets nationwide",
+    "historicalPriceTrends": "Historical price trends and seasonal patterns",
+    "demandForecastingMarketOpportunities": "Demand forecasting and market opportunities",
+    "regionalPriceComparisons": "Regional price comparisons",
+    "optimalSellingTimeRecommendations": "Optimal selling time recommendations",
+    "marketsCoveredStat": "Markets Covered",
+    "acrossIndia": "Across India",
+    "yieldPredictionCategory": "Yield Prediction",
+    "precisionCropYieldForecasting": "Precision Crop Yield Forecasting",
+    "precisionCropYieldForecastingDesc": "Machine learning models trained on weather, soil, and historical data to provide accurate yield predictions for better planning and resource allocation.",
+    "weatherIntegratedYieldModels": "Weather-integrated yield models",
+    "soilConditionAnalysis": "Soil condition analysis",
+    "historicalDataCorrelation": "Historical data correlation",
+    "resourceOptimizationSuggestions": "Resource optimization suggestions",
+    "harvestTimingRecommendations": "Harvest timing recommendations",
+    "predictionAccuracy": "Prediction Accuracy",
+    "averageAccuracy": "Average accuracy",
+    "earlyDiseasePrevention": "Early Disease Prevention",
+    "earlyDiseasePreventionDesc": "Detect diseases before they spread, saving up to 40% in crop losses and treatment costs.",
+    "maximizeProfits": "Maximize Profits",
+    "maximizeProfitsDesc": "Time your sales perfectly with market intelligence and increase revenue by up to 25%.",
+    "instantResults": "Instant Results",
+    "instantResultsDesc": "Get disease diagnosis in seconds and market updates in real-time for quick decision making.",
+    "transformYourFarming": "Transform Your Farming with AI Technology",
+    "transformYourFarmingDesc": "Join thousands of farmers using AgriVision to detect diseases early, predict yields accurately, and access real-time market data for better profits.",
+    "freeDiseaseDetection": "Free disease detection",
+    "liveMarketPricesFeature": "Live market prices",
+    "noSubscriptionRequired": "No subscription required",
+    "detectDiseaseNow": "Detect Disease Now",
+    "viewMarketPrices": "View Market Prices"
   }
 }
+
